# GraphMemory

./: .gitignore  CONTEXT.md  LICENSE  README.md  agent_profile.yaml  config.yaml  pyproject.toml  requirements.txt
docs/: AI记忆系统方案构想.md  PRD.md  USAGE.md
src/api/: __init__.py  server.py
src/graph_memory/: __init__.py  algorithms.py  config.py  core.py  db.py  embeddings.py  maintenance.py  models.py  monitor.py
src/web/: index.html
tests/: conftest.py  test_agent_e2e.py  test_algorithms.py  test_api.py  test_core.py  test_db.py  test_embeddings.py  test_maintenance.py  test_monitor.py
